# nexgraphpy

./: .gitignore  CHANGES.md  CHANGES.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: explanations.md  how-to-guides.md  index.md  reference.md  tutorials.md
nexgraphpy/: __init__.py  nexgraph.py
