[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexgraphpy"
version = "1.0.0"
description = 'Python library for connecting with Nextech force gauges over USB Serial'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["nextech","nexgraph"]
authors = [{ name = "Shawn Myratchapon", email = "info@nexgraphapp.com" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [ "pyserial" ]

[project.urls]
Website = "https://github.com/simply-shawn/nexgraphpy"
