[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexgraphpy"
version = "1.0.1"
description = 'Python library for connecting with Nextech force gauges over USB Serial'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
keywords = ["nextech","nexgraph"]
authors = [{ name = "Shawn Myratchapon", email = "info@nexgraphapp.com" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [ "pyserial" ]

[project.urls]
GitHub = "https://github.com/simply-shawn/nexgraphpy"
Documentation = "https://python.nexgraphapp.com/"
