[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexgraphpy"
version = "2.1.0"
dependencies = [ "pyserial", "matplotlib", "numpy" ]
requires-python = ">=3.10"
authors = [{ name = "Shawn Myratchapon", email = "info@nexgraphapp.com" }]
description = "Python library for connecting with Nextech force gauges over USB Serial"
readme = "README.md"
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["nextech","nexgraph","force","torque","gauge"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://github.com/simply-shawn/nexgraphpy"
Documentation = "https://python.nexgraphapp.com/"
Source = "https://github.com/simply-shawn/nexgraphpy"
"Bug Tracker" = "https://github.com/simply-shawn/nexgraphpy/issues"
Changelog = "https://github.com/simply-shawn/nexgraphpy/blob/main/CHANGELOG.md"